@@ -3,30 +3,26 @@ package hft.cwi.main;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.Arrays;
-import java.util.Collection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import hft.cwi.etl.crawler.CrawlerController;
 import hft.cwi.etl.crawler.ncdc.NCDCCrawler;
 import hft.cwi.etl.crawler.rki.RKICrawler;
 import hft.cwi.etl.crawler.who.WHOCrawler;
-import hft.cwi.etl.filehandling.CSVHandlingUtil;
 
 public class Main {
 
-	public static void main(String[] args) throws IOException {
+	public static void main(String[] args) {
 
 		try (InputStream inputStream = new FileInputStream("resources/crawler.properties")) {
 			Properties properties = new Properties();
 			properties.load(inputStream);
 			
-			URL whoStartURL = createURLFromString(properties.getProperty("crawler.entrypage.who"));
-			URL rkiStartURL = createURLFromString(properties.getProperty("crawler.entrypage.rki"));
-			URL ncdcStartURL = createURLFromString(properties.getProperty("crawler.entrypage.ncdc"));
+			URI whoStartURL = createURIFromString(properties.getProperty("crawler.entrypage.who"));
+			URI rkiStartURL = createURIFromString(properties.getProperty("crawler.entrypage.rki"));
+			URI ncdcStartURL = createURIFromString(properties.getProperty("crawler.entrypage.ncdc"));
 			
 			int crawlingDeepness = Integer.parseInt(properties.getProperty("crawler.maxpagesvisit"));
 			int timeBufferInMS =  Integer.parseInt(properties.getProperty("crawler.timebuffer"));
@@ -36,24 +32,24 @@ public class Main {
 			NCDCCrawler ncdcCrawler = new NCDCCrawler(ncdcStartURL,crawlingDeepness,timeBufferInMS);
 			
 			CrawlerController crawlerController = new CrawlerController(whoCrawler);
-			crawlerController.executeCrawler(null, "who");
+			crawlerController.executeCrawler(null, properties.getProperty("crawler.csv.who"));
 			
-//			crawlerController.changeCrawlerStrategy(rkiCrawler);
-//			crawlerController.executeCrawler(null, "rki");
-//			
-//			crawlerController.changeCrawlerStrategy(rkiCrawler);
-//			crawlerController.executeCrawler(null, "ncdc");
+			crawlerController.changeCrawlerStrategy(rkiCrawler);
+			crawlerController.executeCrawler(null, properties.getProperty("crawler.csv.rki"));
+			
+			crawlerController.changeCrawlerStrategy(ncdcCrawler);
+			crawlerController.executeCrawler(null, properties.getProperty("crawler.csv.ncdc"));
 					
 			
-		} catch (MalformedURLException e) {
+		} catch (IOException e) {
 			e.printStackTrace();
 		}
 	}
 
-	private static URL createURLFromString(String urlAsString) {
+	private static URI createURIFromString(String urlAsString) {
 		try {
-			return new URL(urlAsString);
-		} catch (MalformedURLException e) {
+			return new URI(urlAsString);
+		} catch (URISyntaxException e) {
 			e.printStackTrace();
 			return null;
 		}
